--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "rimraf ./build && tsc",
+    "start": "yarn build && node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.1",
     "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
